@@ -255,7 +255,9 @@ RelSatSolver::solve(std::size_t iv, std::size_t pa, std::size_t session_id, std:
 
 	  if (left_to_request == 0)
 	    {
-	      DMCS_LOG_TRACE("Reached " << k2 << "models. Tell Joiner to shut up and get out");
+	      DMCS_LOG_TRACE("Reached " << k2 << " models. Tell Joiner to shut up and get out. Also send OutputThread a NULL pointer.");
+
+	      mg->sendModel(0, 0, parent_session_id, 0, ConcurrentMessageQueueFactory::OUT_MQ ,0); 
 	      AskNextNotification* notif = new AskNextNotification(BaseNotification::SHUTUP, path, 0, 0, 0);
 	      mg->sendNotification(notif, 0, ConcurrentMessageQueueFactory::SAT_JOINER_MQ, 0);
 	      break;
@@ -272,7 +274,7 @@ RelSatSolver::solve(std::size_t iv, std::size_t pa, std::size_t session_id, std:
 	  if (!prepare_input())
 	    {
 	      DMCS_LOG_TRACE("Got NULL input from JOIN_OUT_MQ. Bailing out...");
-	      
+	      mg->sendModel(0, 0, parent_session_id, 0, ConcurrentMessageQueueFactory::OUT_MQ ,0);
 	      break;
 	    }
 	  DMCS_LOG_TRACE("A fresh solving. input = " << *input);
@@ -296,11 +298,11 @@ void
 RelSatSolver::receiveEOF()
 {
   DMCS_LOG_DEBUG(__PRETTY_FUNCTION__);
-  //  if (is_leaf)
-  //    {
-      DMCS_LOG_TRACE("EOF. Send a NULL pointer to OUT_MQ to close this session.");
+  if (is_leaf)
+    {
+      DMCS_LOG_TRACE("EOF. Leaf case --> Send a NULL pointer to OUT_MQ to close this session.");
       mg->sendModel(0, path, parent_session_id, 0, ConcurrentMessageQueueFactory::OUT_MQ ,0); 
-  //    }
+    }
 }
 
 
